tests/data/parseerror/invalid-class-4.php
<?php

class TokenReflection_Test_ParseInvalidClass14
{
	use;

}
